<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF6D00"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mCameraButton"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:background="#AEEA00"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/buttonTakePhoto"
        android:textColor="#C2185B"
        app:layout_constraintBottom_toTopOf="@+id/mPhotoImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.844"
        app:layout_constraintStart_toEndOf="@id/mDetectButton"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/mGalleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="#AEEA00"
        android:fontFamily="@font/montserrat_bold"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:shadowColor="#5C1818"
        android:text="@string/buttonSelectPhoto"
        android:textColor="#C2185B"
        app:layout_constraintBottom_toTopOf="@+id/mPhotoImageView"
        app:layout_constraintEnd_toStartOf="@+id/mDetectButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/mCameraButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/mPhotoImageView"
        android:layout_width="350dp"
        android:layout_height="400dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/descriptionImage"
        app:layout_constraintBottom_toTopOf="@+id/mDetectButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.668"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@android:color/darker_gray" />

    <Button
        android:id="@+id/mDetectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#DD2C00"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/buttonDiagnose"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/mResultTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mResultTextView"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/defaultImage"
        android:textAlignment="center"
        android:textColor="#292727"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>